# libxcb-wm

./: .gitignore  .gitlab-ci.yml  .gitmodules  Doxyfile  Makefile.am  NEWS  configure.ac
ewmh/: Makefile.am  atomlist.m4  ewmh.c.m4  xcb-ewmh.pc.in  xcb_ewmh.h.m4
icccm/: Makefile.am  xcb_icccm.h
